add permission middleware, rocover middleware
