# docs/swagger.yaml
@@ -4,15 +4,9 @@ definitions:
     properties:
       content:
         type: string
-      created_at:
-        type: string
       image:
         type: string
       title:
-        type: string
-      updated_at:
-        type: string
-      user:
         type: string
     required:
     - content
@@ -23,15 +17,9 @@ definitions:
     properties:
       content:
         type: string
-      created_at:
-        type: string
       image:
         type: string
       title:
-        type: string
-      updated_at:
-        type: string
-      user:
         type: string
     type: object
   github_com_VuThanhThien_golang-gorm-postgres_internal_models_dto.SignInInput:
@@ -353,6 +341,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/github_com_VuThanhThien_golang-gorm-postgres_internal_models_dto.UserResponse'
+        "500":
+          description: an error occurred during the modification
+          schema:
+            type: string
       security:
       - Bearer: []
       summary: GetMe
