# internal/models/dto/post.go
@@ -1,0 +1,28 @@
+package dto
+
+import (
+	"github.com/google/uuid"
+	"time"
+)
+
+type CreatePostRequest struct {
+	Title   string `json:"title"  binding:"required"`
+	Content string `json:"content" binding:"required"`
+	Image   string `json:"image" binding:"required"`
+}
+
+type UpdatePost struct {
+	Title   string `json:"title,omitempty"`
+	Content string `json:"content,omitempty"`
+	Image   string `json:"image,omitempty"`
+}
+
+type PostResponse struct {
+	ID        uuid.UUID `json:"id,omitempty"`
+	Title     string    `json:"title,omitempty"`
+	Content   string    `json:"content,omitempty"`
+	Image     string    `json:"image,omitempty"`
+	UserID    uuid.UUID `json:"user_id,omitempty"`
+	CreatedAt time.Time `json:"created_at,omitempty"`
+	UpdatedAt time.Time `json:"updated_at,omitempty"`
+}
