# internal/models/post.model.go
@@ -1,35 +1,19 @@
 package models
 
 import (
+	"gorm.io/gorm"
 	"time"
 
 	"github.com/google/uuid"
 )
 
 type Post struct {
+	gorm.Model
 	ID        uuid.UUID `gorm:"type:uuid;default:uuid_generate_v4();primary_key" json:"id,omitempty"`
 	Title     string    `gorm:"uniqueIndex;not null" json:"title,omitempty"`
 	Content   string    `gorm:"not null" json:"content,omitempty"`
 	Image     string    `gorm:"not null" json:"image,omitempty"`
-	User      uuid.UUID `gorm:"not null" json:"user,omitempty"`
+	UserID    uuid.UUID `gorm:"type:uuid" json:"user_id,omitempty"`
 	CreatedAt time.Time `gorm:"not null" json:"created_at,omitempty"`
 	UpdatedAt time.Time `gorm:"not null" json:"updated_at,omitempty"`
-}
-
-type CreatePostRequest struct {
-	Title     string    `json:"title"  binding:"required"`
-	Content   string    `json:"content" binding:"required"`
-	Image     string    `json:"image" binding:"required"`
-	User      string    `json:"user,omitempty"`
-	CreatedAt time.Time `json:"created_at,omitempty"`
-	UpdatedAt time.Time `json:"updated_at,omitempty"`
-}
-
-type UpdatePost struct {
-	Title     string    `json:"title,omitempty"`
-	Content   string    `json:"content,omitempty"`
-	Image     string    `json:"image,omitempty"`
-	User      string    `json:"user,omitempty"`
-	CreateAt  time.Time `json:"created_at,omitempty"`
-	UpdatedAt time.Time `json:"updated_at,omitempty"`
 }
